# attest

./: .gitignore  .grant.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
demo/: README.md  __init__.py  store_dies.py
docs/: conformance.md  faq.md
docs/research/: 2026-07-02-foundation-research-digest.md  2026-07-02-foundation-research.json
docs/spec/: attest-privacy.md  attest-standards-relationship.md  attest-threat-model.md  attest-transfer-economics.md  attest-v0.1.md  attest-v0.2.md  attest-versioning.md  opr-v0.1.md
docs/spec/schema/: attest-receipt.schema.json
docs/spec/vectors/: README.md
docs/spec/vectors/02-valid-full/: envelope.json  payload.json
docs/spec/vectors/03-tampered-payload/: envelope.json
docs/spec/vectors/04-wrong-key/: envelope.json  expected.json  payload.json
docs/spec/vectors/05-issuer-mismatch/: envelope.json  expected.json  manifests.json
docs/spec/vectors/06-duplicate-key-reject/: envelope.raw.json  expected.json
docs/spec/vectors/08-sig-malleability/: envelope.json
docs/spec/vectors/10-unknown-field/: envelope.json  expected.json  payload.json
docs/spec/vectors/11-manifest-tamper/: envelope.json  expected.json  manifest_pristine.json  manifests.json
docs/spec/vectors/12-retired-key-ok/: expected.json  manifests.json
docs/spec/vectors/13-compromised-key/: expected.json  manifests.json
docs/spec/vectors/14-rotation-continuity/: envelope.json  manifests.json
formal/: README.md  attest.spthy
ietf/: README.md  draft-martinalli-open-purchase-receipts.xml
site/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
site/e2e/: site.spec.ts
site/public/sample/: demo-binding.json  demo.attest
site/src/: b64u.ts  bundle.ts  explain.ts  intake.ts  main.ts  render.ts  run.ts  sample.ts  styles.css
site/test/: b64u.test.ts  bundle.test.ts  conformance.test.ts  explain.test.ts  intake.test.ts  main.test.ts  render.test.ts  smoke.test.ts
site/test/helpers/: vectors.ts
src/attest/: __init__.py  anchor.py  bundle.py  canon.py  cli.py  commitment.py  issue.py  keys.py  manifests.py  pq.py  revocation.py  tlog.py  transfer.py  transparency.py  ulid.py  validate.py  verify.py
src/attest/schema/: attest-receipt.schema.json
src/opr/: __init__.py  bundle.py  canon.py  cli.py  commitment.py  issue.py  keys.py  manifests.py  revocation.py  validate.py  verify.py
src/opr/schema/: opr-receipt.schema.json
tests/: helpers.py  test_anchor.py  test_assert_artifacts.py  test_bundle.py  test_canon.py  test_check_spec_docs.py  test_cli.py  test_commitment.py  test_demo_e2e.py  test_gen_site_sample.py  test_gen_vectors_helpers.py  test_issue.py  test_issue_hybrid.py  test_keys.py  test_manifests.py  test_manifests_hybrid.py  test_pq.py  test_review_fixes_2026_07.py  test_review_shouldfix_2026_07.py  test_revocation.py  test_revocation_view_bound.py  test_schema.py  test_sibling_hybrid_sidedocs.py  test_smoke.py  test_tlog.py  test_transfer.py  test_transparency.py  test_vectors.py  test_verify.py  test_verify_hybrid.py  test_verify_transfer.py
tests/tools/: test_check_formal.py  test_conformance_dogfood.py  test_conformance_runner.py
tools/: assert_artifacts.py  check_formal.py  check_spec_docs.py  conformance_adapter_py.py  conformance_adapter_ts.mjs  conformance_runner.py  gen_site_sample.py  gen_vectors.py
verifiers/ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
verifiers/ts/src/: anchor.ts  b64u.ts  canon.ts  commitment.ts  dates.ts  ed25519.ts  index.ts  manifests.ts  messages.ts  mldsa.ts  revocation.ts  schema.ts  tlog.ts  transfer.ts  transparency.ts  verify.ts
verifiers/ts/test/: anchor.test.ts  artifact-manifest-currency.test.ts  b64u.test.ts  canon-parse.test.ts  canon-serialize.test.ts  commitment.test.ts  conformance.test.ts  dates.test.ts  ed25519.test.ts  hybrid.test.ts  index.test.ts  manifests.test.ts  messages.test.ts  mldsa.test.ts  review-fixes.test.ts  revocation-bound.test.ts  revocation.test.ts  schema.test.ts  shouldfix.test.ts  sibling-hybrid.test.ts  smoke.test.ts  tlog.test.ts  transfer.test.ts  transparency.test.ts  verify-ceilings.test.ts  verify-unit.test.ts
(+187 files in other folders)
