[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opr"
version = "0.1.0"
description = "Open Purchase Receipt (OPR) v0.1 reference implementation"
requires-python = ">=3.12"
dependencies = ["pynacl>=1.5", "jsonschema>=4.21"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "hypothesis>=6", "ruff", "mypy"]

[project.scripts]
opr = "opr.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF"]
ignore = ["S101"]  # assert in tests

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
