[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attest"
version = "0.1.0"
description = "attest v0.1 reference implementation"
license = { file = "LICENSE" }
authors = [{ name = "Samuele Martinalli" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.12"
dependencies = ["pynacl>=1.5", "jsonschema>=4.21"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "hypothesis>=6", "ruff", "mypy"]

[project.scripts]
attest = "attest.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF"]
ignore = ["S101"]  # assert in tests

[tool.mypy]
strict = true
python_version = "3.12"
# Lets standalone `mypy --strict tools/<script>.py` invocations (e.g. gen_site_sample.py)
# resolve `attest` as first-party typed source instead of an untyped installed package
# (src/attest has no py.typed marker, and PEP 561 requires one for editable-install
# consumers outside the src tree to see its types).
mypy_path = "src"

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
