[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "attest-receipts"
version = "0.2.0"
description = "attest reference implementation (v0.1 and v0.2) — cryptographically-signed, offline-verifiable purchase receipts"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Samuele Martinalli" }]
keywords = ["receipts", "ed25519", "digital-purchases", "consumer-protection", "offline-verification"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = ["pynacl>=1.5", "jsonschema>=4.21", "pqcrypto==0.4.0"]

[project.urls]
Homepage = "https://svm-98.github.io/attest/"
Repository = "https://github.com/SVM-98/attest"
Documentation = "https://github.com/SVM-98/attest/blob/main/docs/spec/attest-v0.2.md"
Issues = "https://github.com/SVM-98/attest/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "hypothesis>=6", "ruff", "mypy", "dilithium-py>=1.4", "pyyaml>=6"]

[project.scripts]
attest = "attest.cli:main"

[tool.hatch.build.targets.wheel]
# Distribution name (attest-receipts) differs from the import package (attest),
# so hatchling cannot infer the package directory on its own.
packages = ["src/attest"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF"]
ignore = ["S101"]  # assert in tests

[tool.mypy]
strict = true
python_version = "3.12"
# Lets standalone `mypy --strict tools/<script>.py` invocations (e.g. gen_site_sample.py)
# resolve `attest` as first-party typed source rather than through the installed package.
mypy_path = "src"

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pqcrypto.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
